<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="end|bottom"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Notepad_Tile_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Notepad_Tile_Title"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Notepad_Tile_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/Notepad_Tile_Description"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="3dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/Notepad_Tile_Delete_Button"
                android:background="@null"
                android:src="@drawable/notepad_delete_icon"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/Notepad_Tile_Delete_ContentDescription" />
            <ImageButton
                android:id="@+id/Notepad_Tile_Edit_Button"
                android:background="@null"
                android:src="@drawable/notepad_edit_icon"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/Notepad_Tile_Edit_ContentDescription" />
            <ImageButton
                android:id="@+id/Notepad_Tile_Copy_Button"
                android:background="@null"
                android:src="@drawable/notepad_copy_icon"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/Notepad_Tile_Copy_ContentDescription" />
            <ImageButton
                android:id="@+id/Notepad_Tile_Share_Button"
                android:background="@null"
                android:src="@drawable/notepad_share_icon"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/Notepad_Tile_Share_ContentDescription" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>