<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NotepadAddActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/Notepad_Add_Title"
                    android:background="@null"
                    android:hint="@string/Notepad_Add_Title"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="3dp"/>
                <EditText
                    android:id="@+id/Notepad_Add_Description"
                    android:background="@null"
                    android:hint="@string/Notepad_Add_Description"
                    android:gravity="top"
                    android:minHeight="100dp"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/Notepad_Add_Button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/Notepad_Add_Button_Text"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:onClick="addNotepad"/>
    </LinearLayout>
</ScrollView>